syntax = "proto3";

option go_package = "genproto/movieservice";

package movieservice;

service CommentsService {
  rpc CreateComment(CreateCommentReq) returns (CreateCommentRes);
  rpc UpdateComment(UpdateCommentReq) returns (UpdateCommentRes);
  rpc GetComment(GetCommentReq) returns (GetCommentRes);
  rpc DeleteComment(DeleteCommentReq) returns (DeleteCommentRes);
  rpc GetAllComments(GetAllCommentsReq) returns (GetAllCommentsRes);
}

message CommentModel {
  string id = 1;
  string user_id = 2;
  string movie_id = 3;
  string description = 4;
  int32 rate = 5;
  string created_at = 6;
  string updated_at = 7;
  int64 deleted_at = 8;
}

message CreateCommentReq {
  string user_id = 1;
  string movie_id = 2;
  string description = 3;
  int32 rate = 4;
}

message CreateCommentRes {
  CommentModel comment = 1;
}

message UpdateCommentReq {
  string id = 1;
  string description = 2;
  int32 rate = 3;
}

message UpdateCommentRes {
  CommentModel comment = 1;
}

message GetCommentReq {
  string id = 1;
}

message GetCommentRes {
  CommentModel comment = 1;
}

message DeleteCommentReq {
  string id = 1;
}

message DeleteCommentRes {
  bool success = 1;
}

message GetAllCommentsReq {
  string id = 1;
  string user_id = 2;
  string movie_id = 3;
  string description = 4;
  int32 rate = 5;
}

message GetAllCommentsRes {
  repeated CommentModel comments = 1;
}
