syntax = "proto3";

option go_package = "genproto/movieservice";

package movieservice;

service MovieService {
  rpc AddMovie(AddMovieReq) returns (AddMovieRes);
  rpc GetMovieById(GetMovieByIdReq) returns (GetMovieByIdRes);
  rpc UpdateMovie(UpdateMovieReq) returns (UpdateMovieRes);
  rpc DeleteMovie(DeleteMovieReq) returns (DeleteMovieRes);
  rpc RemoveMovie(RemoveMovieReq) returns (RemoveMovieRes);
  rpc GetAllMovies(GetAllMoviesReq) returns (GetAllMoviesRes);
}
//ðŸ˜‡
message Genres {
  string genre = 1;
}

message MovieModel{
  string id = 1;
  string movie_name = 2;
  int32 age_limit = 3;
  string background_image_url = 4;
  string movie_url = 5;
  string studio = 6;
  string bio = 7;
  repeated Genres genres = 8;
  string language = 9;
  string created_at = 10;
  string updated_at = 11;
  int32 season = 12;
}

message AddMovieReq {
  string movie_name = 1;
  int32 age_limit = 2;
  int32 season = 3;
  string background_image_url = 4;
  string movie_url = 5;
  string studio = 6;
  string bio = 7;
  repeated Genres genres = 8;
  string language = 9;
}

message AddMovieRes {
  string message = 1;
}

message GetMovieByIdReq {
  string id = 1;
}

message GetMovieByIdRes {
  MovieMOdel Res = 1;
}

message UpdateMovieReq {
  string id = 1;
  string movie_name = 2;
  int32 age_limit = 3;
  string background_image_url = 4;
  string movie_url = 5;
  string studio = 6;
  string bio = 7;
  repeated Genres genres = 8;
  string language = 9;
  int32 season = 10;
}

message UpdateMovieRes {
  bool success = 1;
}

message DeleteMovieReq {
  string id = 1;
}

message DeleteMovieRes {
  bool success = 1;
}

message RemoveMovieReq {
  string id = 1;
}

message RemoveMovieRes {
  bool success = 1;
}

message GetAllMoviesReq {
  string id = 1;
  string movie_name = 2;
  int32 age_limit = 3;
  string background_image_url = 4;
  string movie_url = 5;
  string studio = 6;
  string bio = 7;
  repeated Genres genres = 8;
  string language = 9;
  int32 limit = 10;
  int32 offset = 11;
  int32 season = 12;
}

message GetAllMoviesRes {
  repeated MovieMOdel movies = 1;
  int32 total_count = 2;
}
